[gd_scene load_steps=5 format=2]

[ext_resource path="res://game_management/GameManager.gd" type="Script" id=1]
[ext_resource path="res://galaxy/Camera.gd" type="Script" id=3]
[ext_resource path="res://user_interface/themes/main_theme.tres" type="Theme" id=5]
[ext_resource path="res://galaxy/UI.gd" type="Script" id=6]

[node name="MainScene" type="Node2D"]
script = ExtResource( 1 )

[node name="MainCamera" type="Camera2D" parent="."]
current = true
script = ExtResource( 3 )

[node name="UI" type="CanvasLayer" parent="."]
pause_mode = 2
script = ExtResource( 6 )

[node name="PauseMenu" type="Control" parent="UI"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="UI/PauseMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.18787
margin_top = 1.7818
margin_right = -1.18787
margin_bottom = 1.7818
color = Color( 0, 0, 0, 0.145098 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="UI/PauseMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -118.5
margin_top = -136.5
margin_right = 118.5
margin_bottom = 136.5
theme = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="UI/PauseMenu/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 15.0
margin_right = -30.0
margin_bottom = -15.0
size_flags_vertical = 4
theme = ExtResource( 5 )
custom_constants/separation = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI/PauseMenu/Panel/VBoxContainer"]
margin_right = 177.0
margin_bottom = 20.0
text = "Game Paused"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveButton" type="Button" parent="UI/PauseMenu/Panel/VBoxContainer"]
margin_top = 35.0
margin_right = 177.0
margin_bottom = 61.0
text = "Save / Load"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsButton" type="Button" parent="UI/PauseMenu/Panel/VBoxContainer"]
margin_top = 76.0
margin_right = 177.0
margin_bottom = 102.0
text = "Settings"

[node name="ExitMenuButton" type="Button" parent="UI/PauseMenu/Panel/VBoxContainer"]
margin_top = 117.0
margin_right = 177.0
margin_bottom = 143.0
text = "Exit to Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitDesktopButton" type="Button" parent="UI/PauseMenu/Panel/VBoxContainer"]
margin_top = 158.0
margin_right = 177.0
margin_bottom = 184.0
text = "Exit to Desktop"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeButton" type="Button" parent="UI/PauseMenu/Panel/VBoxContainer"]
margin_top = 199.0
margin_right = 177.0
margin_bottom = 225.0
text = "Resume"
[connection signal="pressed" from="UI/PauseMenu/Panel/VBoxContainer/SaveButton" to="UI" method="_on_SaveButton_pressed"]
[connection signal="pressed" from="UI/PauseMenu/Panel/VBoxContainer/ResumeButton" to="UI" method="_on_ResumeButton_pressed"]
